--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ section{
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: #000;
 }
 
 main{
@@ -168,7 +169,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 
 @media (max-width:800px) {
     .header{
-        background:rgba(0, 0, 0, 0.603);
+        background:rgba(0, 0, 0);
     }
 
     .header .boton-container{
@@ -191,7 +192,6 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
         flex-direction:column;
         top:70px;
         right:0;
-        overflow-y:auto;
         text-align: center;
         padding:20px;
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
@@ -301,10 +301,79 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 }
 
 /* Section-2:Apartado About me*/
-
-
 .section-2{
-
+    border-top-color: #fff;
+    border-top-style:solid;
+    border-top-width:4px;
+    font-weight: bold;
 }
+
+.section-2 .about-title-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin:20px;
+}
+
+.section-2 .about-title-1{
+    font-size:27px;
+    color:cyan;
+    margin-right: 6px;
+}
+
+.section-2 .about-title-2{
+    font-size:27px;
+    color:#fff;
+}
+
+.section-2 .about-container{
+    display: flex;
+    align-items: center;
+    margin:20px 20px;
+}
+
+
+.section-2 .about-container .about-img{
+    width:300px;
+    height:300px;
+}
+
+.section-2 .description-container{
+    background-color: rgb(13, 13, 14);
+    width:100%;
+    height:300px;
+    font-size:18px;
+}
+
+.section-2 .description-container .title-description{
+    text-align: center;
+    margin:25px;
+    color:#fff;  
+}
+
+.section-2 .cyan{
+    color:cyan;
+}
+
+.section-2 .description-container .description-about{
+    color:#fff;
+    font-size:15px;
+    margin:25px 25px;
+    text-align: justify;
+}
+
+@media (max-width:800px) {
+    .section-2 .about-container{
+        flex-direction:column;
+    }
+
+    .section-2 .description-container{
+        height: 100%;
+    }
+    
+}
+
+
+
 
 
