--- a/css/main.css
+++ b/css/main.css
@@ -211,10 +211,14 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 /* Section-1:Presentacion de la Web*/
 
 .section-1{
+    height: 100vh;
     background-image: url(fondo-noche.jpg);
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center center;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .section-1-layer_dark{
@@ -270,6 +274,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
     }
     .section-1 h1{
         width:90%;
+
     }
     .section-1 h2{
         width:90%;
