--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html{
 }
 
 section{
-    scroll-margin-top: 70px;
+    scroll-margin-top: 80px;
 }
 
 
@@ -223,6 +223,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 .section-1-layer_dark{
     background-color: rgba(0, 0, 0, 0.692);
     height: 100vh;
+    width:100%;
 }
 
 .section-1-container{
@@ -307,10 +308,8 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 
 /* Section-2:Apartado About me*/
 .section-2{
-    border-top-color: #fff;
-    border-top-style:solid;
-    border-top-width:4px;
-    font-weight: bold;
+    height: 100vh;
+    
 }
 
 .section-2 .about-title-container{
@@ -339,8 +338,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 
 
 .section-2 .about-container .about-img{
-    width: 100%;
-    height:100%;
+    width: 200px;
     display:none;
 }
 
@@ -357,6 +355,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
     font-size:18px;
     line-height: 130%;
     font-family: 'Comfortaa', cursive;
+    margin-top:15px;
 }
 
 .section-2 .description-container .title-description{
@@ -391,14 +390,19 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 
     .section-2 .description-container{
         height: 100%;
+        margin-top:15px;
     }
 
     .section-2 .about-container .about-img-mini{
-        display:none;
+        display:block;
+        float:none;
+        margin:auto;
+        margin-top:20px;
+        
     }
 
     .section-2 .about-container .about-img{
-        display:block;
+        display:none;
     }
     
 }
@@ -459,6 +463,10 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 .section-2 .btn-ocultar:hover{
     transition:500ms;
     padding:5px 25px;
+}
+
+p{
+    color:#fff;
 }
 
 
