--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html{
 }
 
 section{
-    scroll-margin-top: 80px;
+    scroll-margin-top: 60px;
 }
 
 
@@ -309,6 +309,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 /* Section-2:Apartado About me*/
 .section-2{
     height: 100vh;
+    background-color: rgb(13, 13, 14)
     
 }
 
@@ -320,20 +321,25 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 }
 
 .section-2 .about-title-1{
-    font-size:27px;
+    font-size:35px;
     color:cyan;
     margin-right: 6px;
+    margin-top:20px;
+
 }
 
 .section-2 .about-title-2{
-    font-size:27px;
+    font-size:35px;
     color:#fff;
+    margin-top:20px;
 }
 
 .section-2 .about-container{
     display: flex;
+    justify-content: center;
     align-items: center;
     margin:20px 20px;
+    height: 70vh;
 }
 
 
@@ -384,8 +390,13 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 }
 
 @media (max-width:800px) {
+    .section-2{
+        height: 100%;
+        
+    }
     .section-2 .about-container{
         flex-direction:column;
+        height: 100%;
     }
 
     .section-2 .description-container{
