--- a/css/main.css
+++ b/css/main.css
@@ -774,6 +774,7 @@ i.fa-twitter:hover,i.fa-instagram-square:hover,i.fa-behance:hover,i.fa-facebook:
 footer{
     position:relative;
     width:100%;
+    margin-top:180px;
     padding:20px 50px;
     background-color: #000;
     min-height: 100px;
@@ -869,6 +870,69 @@ footer p {
     margin-top:15px;
     margin-bottom:10px;
 }
+
+footer .wave {
+    position:absolute;
+    top:-110px;
+    left:0;
+    width:100%;
+    height: 100px;
+    background:url(/images/wave.png);
+    margin-top:30px;
+    background-size: 1000px 100px;  
+}
+
+footer .wave#wave1 {
+    z-index:1000;
+    opacity:1;
+    bottom:0;
+    animation: animateWave 4s linear infinite;
+}
+
+footer .wave#wave2 {
+    z-index:999;
+    opacity:0.5;
+    bottom:10px;
+    animation: animateWave_2 4s linear infinite;
+}
+
+
+footer .wave#wave3 {
+    z-index:1000;
+    opacity:0.2;
+    bottom:15px;
+    animation: animateWave 3s linear infinite;
+}
+
+footer .wave#wave4 {
+    z-index:999;
+    opacity:0.7;
+    bottom:20px;
+    animation: animateWave_2 3s linear infinite;
+}
+
+@keyframes animateWave {
+    0%{
+        background-position-x: 1000px;
+    }
+
+    100%{
+        background-position-x: 0px;
+    }  
+}
+
+@keyframes animateWave_2 {
+    0%{
+        background-position-x: 0px;
+    }
+
+    100%{
+        background-position-x: 1000px;
+    }  
+}
+    
+
+
 
 
 
