--- a/css/main.css
+++ b/css/main.css
@@ -776,7 +776,7 @@ footer{
     width:100%;
     margin-top:180px;
     padding:20px 50px;
-    background-color: #000;
+    background-color: #006666;
     min-height: 100px;
     display:flex;
     flex-direction:column;
@@ -808,64 +808,41 @@ footer .social-icon li{
 footer .social-icon li a i,
 footer .footer-menu li a{
     font-size:35px;
-    color:cyan;
+    color:rgb(255, 255, 255);
     margin:0 10px;
     display:inline-block;
-    background-color: rgb(0, 0, 0);
+    background-color: #006666;
     padding:6px;
     border-radius:50%;
-    border-width:1px;
+    border-width:3px;
 }
 
 footer .footer-menu li a{
     font-size:20px;
     text-decoration:none;
-    opacity:0.7;
 }
 
 footer .footer-menu li a:hover{
     transition:500ms;
-    transform: translateY(-10px);
+    transform: translateY(-8px);
     opacity:1;
 }
 
 footer .social-icon li a i:hover{
-    color:cyan;
+    color:#fff;
     transform:translateY(0);
-    animation:bordes 1s ;
+    animation: rotar 1s;
 }
 
-
-@keyframes bordes {
-    0%{
-        border-top-color: cyan;
-        border-top-style:solid;  
-    }
-
-    25%{
-        border-right-color:cyan;
-        border-right-style:solid;   
-    }
-
-    50%{
-        border-bottom-color:cyan;
-        border-bottom-style:solid;   
-    }
-
-    75%{
-        border-left-color:cyan;
-        border-left-style:solid;   
-    }
-
-    100%{
-        border-color:cyan;
-        border-style:solid;   
-    }
-   
+@keyframes rotar {
+    0%{transform:rotate(0deg)}
+    100%{transform:rotate(360deg)}
+    
 }
+
 
 footer p {
-    color:cyan;
+    color:#fff;
     text-align: center;
     margin-top:15px;
     margin-bottom:10px;
@@ -877,7 +854,7 @@ footer .wave {
     left:0;
     width:100%;
     height: 100px;
-    background:url(/images/wave.png);
+    background:url(wave-miku-oscuro.png);
     margin-top:30px;
     background-size: 1000px 100px;  
 }
